--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,40 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lucene Search System</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <style>
         body { font-family: Arial, sans-serif; padding: 20px; }
-        .form-group { margin-bottom: 10px; }
-        label { margin-bottom: 5px; display: block; }
-        input, button { padding: 10px; }
+        .form-group { margin-bottom: 15px; }
         #results { margin-top: 20px; }
+        .result-item { border: 1px solid #ddd; padding: 15px; margin-bottom: 15px; border-radius: 5px; }
     </style>
 </head>
 <body>
-    <h1>Lucene Document Indexer</h1>
-    <div>
-        <div class="form-group">
-            <label for="title">Title:</label>
-            <input type="text" id="title" placeholder="Enter title" />
+    <div class="container">
+        <h1 class="my-4">Lucene Document Indexer!</h1>
+        <div class="card mb-4">
+            <div class="card-body">
+                <div class="form-group">
+                    <label for="title">Title:</label>
+                    <input type="text" id="title" class="form-control" placeholder="Enter title" />
+                </div>
+                <div class="form-group">
+                    <label for="content">Content:</label>
+                    <input type="text" id="content" class="form-control" placeholder="Enter content" />
+                </div>
+                <button class="btn btn-primary" onclick="indexDocument()">Index Document</button>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="content">Content:</label>
-            <input type="text" id="content" placeholder="Enter content" />
-        </div>
-        <button onclick="indexDocument()">Index Document</button>
-    </div>
 
-    <h1>Lucene Document Searcher</h1>
-    <div>
-        <div class="form-group">
-            <label for="query">Search Query:</label>
-            <input type="text" id="query" placeholder="Enter search query" />
+        <h1 class="my-4">Lucene Document Searcher!</h1>
+        <div class="card mb-4">
+            <div class="card-body">
+                <div class="form-group">
+                    <label for="query">Search Query:</label>
+                    <input type="text" id="query" class="form-control" placeholder="Enter search query" />
+                </div>
+                <button class="btn btn-success" onclick="searchDocuments()">Search</button>
+            </div>
         </div>
-        <button onclick="searchDocuments()">Search</button>
-    </div>
 
-    <div id="results"></div>
+        <div id="results"></div>
+    </div>
 
     <script>
         function indexDocument() {
@@ -56,12 +65,12 @@
             var query = $('#query').val();
             $.get('/search', { query: query })
                 .done(function(data) {
-                    console.log(data)
+                    console.log(data);
                     var results = $('#results');
                     results.empty();
                     if (data.length > 0) {
                         data.forEach(function(doc) {
-                            results.append('<div><h4>' + doc.title + '</h4><p>' + doc.content + '</p></div>');
+                            results.append('<div class="result-item"><h4>' + doc.title + '</h4><p>' + doc.content + '</p></div>');
                         });
                     } else {
                         results.append('<p>No documents found.</p>');
